--- a/app/src/main/res/layout/fragment_history_details.xml
+++ b/app/src/main/res/layout/fragment_history_details.xml
@@ -20,7 +20,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:gravity="center"
             android:textColor="@color/noInformationColor"
-            android:text="@string/no_information" />
+            android:text="@string/history_details_no_information" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/historyDetailsRecyclerView"
@@ -50,7 +50,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:maxLines="1"
             android:textColor="@color/textColorPrimary"
-            android:text="@string/total" />
+            android:text="@string/history_details_total" />
 
         <TextView
             android:id="@+id/totalTextView"
