--- a/app/src/main/res/layout/list_item_history_details.xml
+++ b/app/src/main/res/layout/list_item_history_details.xml
@@ -45,7 +45,7 @@
             android:id="@+id/addGoodButton"
             android:layout_width="@dimen/add_good_button_size"
             android:layout_height="@dimen/add_good_button_size"
-            android:contentDescription="@string/add_good_to_list"
+            android:contentDescription="@string/history_details_add_good_to_list"
             android:src="@drawable/add"
             android:scaleType="centerInside" />
 
@@ -64,7 +64,7 @@
             android:id="@+id/goodDetailsButton"
             android:layout_width="@dimen/good_details_button_size"
             android:layout_height="@dimen/good_details_button_size"
-            android:contentDescription="@string/good_details"
+            android:contentDescription="@string/history_details_good_details"
             android:src="@drawable/good_details"
             android:scaleType="centerInside" />
 
