--- a/app/src/main/res/layout/list_item_shop.xml
+++ b/app/src/main/res/layout/list_item_shop.xml
@@ -23,7 +23,7 @@
         android:layout_marginRight="@dimen/common_margin"
         android:layout_marginEnd="@dimen/common_margin"
         android:layout_marginTop="@dimen/common_margin"
-        android:contentDescription="@string/nearest_shop"
+        android:contentDescription="@string/select_shop_nearest_shop"
         android:src="@drawable/nearest_shop"
         android:scaleType="centerInside" />
 
