--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,26 +16,12 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-    <style name="FullscreenTheme" parent="AppTheme"> <!-- TODO: android:Theme.NoTitleBar.Fullscreen -->
-        <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item> <!-- TODO: WTF -->
-        <item name="android:windowActionBarOverlay">true</item> <!-- TODO: WTF -->
-        <item name="android:windowBackground">@null</item>
+    <style name="AppTheme.FullscreenTheme" parent="android:Theme.NoTitleBar.Fullscreen">
+        <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 
-    <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
-        <item name="android:background">@color/black_overlay</item>
-    </style>
+    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="ShopFilterServiceButtonStyle" parent="Widget.AppCompat.ImageButton">
-        <item name="android:background">@android:color/transparent</item>
-    </style>
-
-    <style name="ExpandCategoryButtonStyle" parent="Widget.AppCompat.ImageButton">
-        <item name="android:background">@android:color/transparent</item>
-    </style>
+    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
