--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Settings title -->
     <string name="activity_settings_title">Settings</string>
 
+
+
+    <!-- General settings -->
     <string name="settings_pref_header_general">General</string>
+
+    <string name="settings_pref_title_city">City</string>
+    <string name="settings_pref_description_city">Select your city</string>
+
+
+
+    <!-- Notifications settings -->
     <string name="settings_pref_header_notifications">Notifications</string>
 
-    <string name="settings_pref_title_general_city">City</string>
-    <string name="settings_pref_description_general_city">Select your city</string>
+    <string name="settings_pref_title_show_notification">Show notification</string>
+    <string name="settings_pref_description_show_notification">Enables notification</string>
 
-    <string name="settings_pref_title_notifications_show_notification">Show notification</string>
-    <string name="settings_pref_description_notifications_show_notification">Enables notification</string>
 </resources>
