--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -2,9 +2,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <SwitchPreference
-        android:key="SHOW_NOTIFICATION"
-        android:title="@string/settings_pref_title_notifications_show_notification"
-        android:summary="@string/settings_pref_description_notifications_show_notification"
-        android:defaultValue="true" />
+        android:key="@string/pref_key_show_notifications"
+        android:defaultValue="@bool/pref_default_show_notifications"
+        android:title="@string/settings_pref_title_show_notification"
+        android:summary="@string/settings_pref_description_show_notification" />
 
 </PreferenceScreen>
