--- a/app/src/main/res/layout/fragment_history_details.xml
+++ b/app/src/main/res/layout/fragment_history_details.xml
@@ -34,10 +34,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/common_margin"
-        android:paddingTop="@dimen/common_margin"
-        android:paddingRight="@dimen/common_margin"
-        android:paddingBottom="@dimen/common_margin"
         android:orientation="horizontal"
         android:background="@color/colorPrimary">
 
@@ -45,8 +41,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="100"
+            android:layout_marginLeft="@dimen/common_margin"
+            android:layout_marginTop="@dimen/common_margin"
             android:layout_marginRight="@dimen/common_margin"
-            android:layout_marginEnd="@dimen/common_margin"
+            android:layout_marginBottom="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:maxLines="1"
             android:textColor="@color/textColorPrimary"
@@ -56,6 +54,10 @@
             android:id="@+id/totalTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/common_margin"
+            android:layout_marginRight="@dimen/common_margin"
+            android:layout_marginEnd="@dimen/common_margin"
+            android:layout_marginBottom="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:maxLines="1"
             android:textColor="@color/textColorPrimary" />
