--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,13 @@
     <color name="textColorPrimary">#FFFFFFFF</color>
     <color name="textColor">#FF000000</color>
 
-    <color name="black_overlay">#66000000</color>
+    <!-- Shop selection color -->
     <color name="selectedShop">#FFFFECB3</color>
+
+    <!-- Colors for Goods catalog -->
     <color name="progressBarInToolbar">#FFFFFFFF</color>
+
+    <!-- History details colors -->
     <color name="noInformationColor">#80000000</color>
 
 </resources>
