--- a/app/src/main/res/layout/fragment_shop_details.xml
+++ b/app/src/main/res/layout/fragment_shop_details.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:maxLines="1"
         android:gravity="center_horizontal|top"
         android:text="@string/shop_details_undefined_shop" />
 
@@ -33,6 +34,8 @@
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/shop_details_phone" />
 
         <TextView
@@ -42,6 +45,8 @@
             grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/no_value" />
 
         <TextView
@@ -51,6 +56,8 @@
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/shop_details_work_hours" />
 
         <TextView
@@ -60,6 +67,8 @@
             grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/no_value" />
 
         <TextView
@@ -69,6 +78,8 @@
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/shop_details_square" />
 
         <TextView
@@ -78,6 +89,8 @@
             grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/no_value" />
 
         <TextView
@@ -87,6 +100,8 @@
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/shop_details_opening_date" />
 
         <TextView
@@ -96,6 +111,8 @@
             grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/no_value" />
 
         <TextView
@@ -105,6 +122,8 @@
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/shop_details_parking_places" />
 
         <TextView
@@ -114,6 +133,8 @@
             grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/no_value" />
 
         <TextView
@@ -123,6 +144,8 @@
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/shop_details_number_of_cashboxes" />
 
         <TextView
@@ -132,6 +155,8 @@
             grid:layout_columnWeight="50"
             grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/no_value" />
 
     </android.support.v7.widget.GridLayout>
@@ -152,6 +177,8 @@
             grid:layout_gravity="fill_horizontal|center_vertical"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/shop_details_services" />
 
         <HorizontalScrollView
@@ -322,6 +349,8 @@
             grid:layout_gravity="fill_horizontal|center_vertical"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
+            android:maxLines="1"
+            android:gravity="start|center_vertical"
             android:text="@string/shop_details_photos" />
 
         <FrameLayout
