--- a/app/src/main/res/layout/list_item_good.xml
+++ b/app/src/main/res/layout/list_item_good.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:gravity="center" />
+            android:maxLines="1"
+            android:gravity="center_horizontal|center_vertical" />
 
     </LinearLayout>
 
@@ -51,7 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:gravity="center" />
+            android:maxLines="1"
+            android:gravity="center_horizontal|center_vertical" />
 
     </LinearLayout>
 
