--- a/app/src/main/res/layout/list_item_history.xml
+++ b/app/src/main/res/layout/list_item_history.xml
@@ -27,7 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:gravity="start|center_vertical" />
 
         <TextView
             android:id="@+id/durationTextView"
@@ -37,7 +38,8 @@
             android:layout_marginLeft="@dimen/common_margin"
             android:layout_marginRight="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:gravity="start|center_vertical" />
 
         <TextView
             android:id="@+id/totalTextView"
