--- a/app/src/main/res/layout/list_item_selected_good.xml
+++ b/app/src/main/res/layout/list_item_selected_good.xml
@@ -21,14 +21,16 @@
             android:layout_marginRight="@dimen/common_margin"
             android:layout_marginEnd="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:gravity="start|center_vertical" />
 
         <TextView
             android:id="@+id/costTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:gravity="start|center_vertical" />
 
     </LinearLayout>
 
