--- a/app/src/main/res/layout/list_item_shop.xml
+++ b/app/src/main/res/layout/list_item_shop.xml
@@ -14,6 +14,7 @@
         android:layout_marginLeft="@dimen/common_margin"
         android:layout_marginRight="@dimen/common_margin"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:maxLines="1"
         android:gravity="start|center_vertical" />
 
     <ImageView
