--- a/app/src/main/res/layout/list_item_goods_category.xml
+++ b/app/src/main/res/layout/list_item_goods_category.xml
@@ -29,6 +29,7 @@
         android:layout_gravity="start|center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:maxLines="1"
-        android:gravity="start|center_vertical" />
+        android:gravity="start|center_vertical"
+        android:ellipsize="end" />
 
 </LinearLayout>
