--- a/app/src/main/res/layout/list_item_good.xml
+++ b/app/src/main/res/layout/list_item_good.xml
@@ -25,8 +25,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1"
-            android:gravity="center_horizontal|center_vertical" />
+            android:maxLines="2"
+            android:gravity="center_horizontal|center_vertical"
+            android:ellipsize="end" />
 
     </LinearLayout>
 
@@ -52,8 +53,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:maxLines="1"
-            android:gravity="center_horizontal|center_vertical" />
+            android:maxLines="2"
+            android:gravity="center_horizontal|center_vertical"
+            android:ellipsize="end" />
 
     </LinearLayout>
 
