--- a/app/src/main/res/layout/list_item_history.xml
+++ b/app/src/main/res/layout/list_item_history.xml
@@ -13,7 +13,8 @@
         android:layout_marginRight="@dimen/common_margin"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:maxLines="1"
-        android:gravity="start|center_vertical" />
+        android:gravity="start|center_vertical"
+        android:ellipsize="start" />
 
     <LinearLayout
         android:layout_width="match_parent"
