--- a/app/src/main/res/layout/list_item_shop.xml
+++ b/app/src/main/res/layout/list_item_shop.xml
@@ -14,8 +14,9 @@
         android:layout_marginLeft="@dimen/common_margin"
         android:layout_marginRight="@dimen/common_margin"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:maxLines="1"
-        android:gravity="start|center_vertical" />
+        android:maxLines="2"
+        android:gravity="start|center_vertical"
+        android:ellipsize="start" />
 
     <ImageView
         android:id="@+id/nearestShopImageView"
